--- a/.github/workflows/build-publish-v2.yml
+++ b/.github/workflows/build-publish-v2.yml
@@ -25,7 +25,7 @@ jobs:
                 JF_URL: https://${{ vars.JF_URL }}/
                 JF_PROJECT: carmit-prj-1
               with:
-                  oidc-provider-name: jfrog-github-oidc
+                  oidc-provider-name: github-carmit-project-1
 
             - name: Checkout the repository
               uses: actions/checkout@v4
