--- a/.github/workflows/build-publish-v2.yml
+++ b/.github/workflows/build-publish-v2.yml
@@ -119,19 +119,19 @@ jobs:
                 jf rt build-add-git
                 jf rt build-publish
 
-            - name: build scan
-              run: |            
-                jf build-scan
+            #- name: build scan
+            #  run: |            
+            #    jf build-scan
                 
-            - name: Write to workflow job summary
-              run: |
-                    NOTE=$'>[!NOTE]\n>Frog Notes \n'
-                    TIP=$'>[!TIP]\n>Hello JFrog\n'
-                    IMPORTANT=$'>[!IMPORTANT]\n>Hello IMPORTANT NOTE\n'
-                    WARNING=$'>[!WARNING]\n>Hello WARNING NOTE\n'
-                    CAUTION=$'>[!CAUTION]\n>Hello CAUTION NOTE\n'
-                    echo "$NOTE" >> $GITHUB_STEP_SUMMARY
-                    echo "$TIP" >> $GITHUB_STEP_SUMMARY
-                    echo "$IMPORTANT" >> $GITHUB_STEP_SUMMARY
-                    echo "$WARNING" >> $GITHUB_STEP_SUMMARY
-                    echo "$CAUTION" >> $GITHUB_STEP_SUMMARY
+            #- name: Write to workflow job summary
+            #  run: |
+            #        NOTE=$'>[!NOTE]\n>Frog Notes \n'
+            #        TIP=$'>[!TIP]\n>Hello JFrog\n'
+            #        IMPORTANT=$'>[!IMPORTANT]\n>Hello IMPORTANT NOTE\n'
+            #        WARNING=$'>[!WARNING]\n>Hello WARNING NOTE\n'
+            #        CAUTION=$'>[!CAUTION]\n>Hello CAUTION NOTE\n'
+            #        echo "$NOTE" >> $GITHUB_STEP_SUMMARY
+            #        echo "$TIP" >> $GITHUB_STEP_SUMMARY
+            #        echo "$IMPORTANT" >> $GITHUB_STEP_SUMMARY
+            #        echo "$WARNING" >> $GITHUB_STEP_SUMMARY
+            #        echo "$CAUTION" >> $GITHUB_STEP_SUMMARY
