--- a/.github/workflows/build-publish-v2.yml
+++ b/.github/workflows/build-publish-v2.yml
@@ -110,7 +110,7 @@ jobs:
               with:
                 subject-name: ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
                 subject-digest: '${{ steps.set_vars.outputs.docker_digest }}'
-                push-to-registry: true
+                push-to-registry: false
             
             - name: docker scan
               run: |  
