--- a/.github/workflows/build-publish-v2.yml
+++ b/.github/workflows/build-publish-v2.yml
@@ -109,7 +109,7 @@ jobs:
               uses: actions/attest-build-provenance@v1
               with:
                 subject-name: ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
-                subject-digest: '${{ steps.set_vars.outputs.docker_digest }}'
+                subject-digest: ${{ steps.set_vars.outputs.docker_digest }}
                 push-to-registry: false
             
             - name: docker scan
