--- a/.github/workflows/build-publish-v2.yml
+++ b/.github/workflows/build-publish-v2.yml
@@ -60,18 +60,18 @@ jobs:
                 ls -ltr dist
                 
                 
-            - name: Generate artifact attestation
-              uses: actions/attest-build-provenance@v1
-              with:
-                subject-path: 'dist/jfrog_python_example-1.0.tar.gz'
+            #- name: Generate artifact attestation
+            #  uses: actions/attest-build-provenance@v1
+            #  with:
+            #    subject-path: 'dist/jfrog_python_example-1.0.tar.gz'
                 
             - name: publish python package
               run: |
                 jf rt u dist/ codeninjas-proj-python-virtual/example-projects/ 
 
-            - name: check file system post binary attestation
-              run: |   
-                echo "ls ."
+           # - name: check file system post binary attestation
+           #   run: |   
+           #     echo "ls ."
                 
             - name: Set up QEMU
               uses: docker/setup-qemu-action@v3                 
@@ -106,12 +106,12 @@ jobs:
                  echo "digest=$digest"
                  echo "docker_digest=$digest" | tr -d '"' >> $GITHUB_OUTPUT
 
-            - name: Generate docker attestation
-              uses: actions/attest-build-provenance@v1
-              with:
-                subject-name: ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
-                subject-digest: ${{ steps.set_vars.outputs.docker_digest }}
-                push-to-registry: false
+            #- name: Generate docker attestation
+            #  uses: actions/attest-build-provenance@v1
+            #  with:
+            #    subject-name: ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
+            #    subject-digest: ${{ steps.set_vars.outputs.docker_digest }}
+            #    push-to-registry: false
             
             - name: docker scan
               run: |  
