--- a/.github/workflows/build-publish-v2.yml
+++ b/.github/workflows/build-publish-v2.yml
@@ -18,6 +18,7 @@ jobs:
           JF_URL: https://${{ vars.JF_URL }}/
           DOCKER_CLI_EXPERIMENTAL: enabled
           NOW_URL: ${{ vars.NOW_URL }}
+          RB_VERSION: '1.0.5'
         steps:
             # Use the specific setup-cli branch
             - name: Setup JFrog CLI
@@ -161,7 +162,7 @@ jobs:
                 echo "**************"
                 cat build.json
                 echo "**************"
-                jf release-bundle-create --signing-key test --spec build.json my-rb 1.0.4
+                jf release-bundle-create --signing-key test --spec build.json my-rb ${{ env.RB_VERSION }}
     
 
             - name: request_promotion
@@ -172,7 +173,7 @@ jobs:
                     --header "Content-Type:application/json" \
                     --data "{\"project_key\":\"${{ env.JFROG_CLI_BUILD_PROJECT }}\",
                     \"release_name\": \"my-rb\",
-                    \"release_version\":\"1.0.1\",
+                    \"release_version\":\"${{ env.RB_VERSION }}\",
                     \"target_environment\": \"DEV\"
                     }" \
                     --user 'admin':${{ secrets.SNOW_PASSWORD }}
