--- a/.github/workflows/build-publish-v2.yml
+++ b/.github/workflows/build-publish-v2.yml
@@ -18,7 +18,7 @@ jobs:
           JF_URL: https://${{ vars.JF_URL }}/
           DOCKER_CLI_EXPERIMENTAL: enabled
           NOW_URL: ${{ vars.NOW_URL }}
-          RB_VERSION: '1.0.6'
+          RB_VERSION: '2.0.1'
         steps:
             # Use the specific setup-cli branch
             - name: Setup JFrog CLI
@@ -26,7 +26,7 @@ jobs:
               id: setup-cli
               env:
                 JF_URL: https://${{ vars.JF_URL }}/
-                #JF_PROJECT: carmit-prj-1
+                JF_PROJECT: carmit-prj-1
               with:
                   oidc-provider-name: evidence-demo
 
