--- a/.github/workflows/build-publish-v2.yml
+++ b/.github/workflows/build-publish-v2.yml
@@ -18,7 +18,7 @@ jobs:
           JF_URL: https://${{ vars.JF_URL }}/
           DOCKER_CLI_EXPERIMENTAL: enabled
           NOW_URL: ${{ vars.NOW_URL }}
-          RB_VERSION: '2.0.1'
+          RB_VERSION: '1.0.1'
         steps:
             # Use the specific setup-cli branch
             - name: Setup JFrog CLI
@@ -162,7 +162,7 @@ jobs:
                 echo "**************"
                 cat build.json
                 echo "**************"
-                jf release-bundle-create --signing-key test --spec build.json my-rb ${{ env.RB_VERSION }}
+                jf release-bundle-create --signing-key test --spec build.json my-release-bundle-demo ${{ env.RB_VERSION }}
     
 
             - name: request_promotion
@@ -171,7 +171,7 @@ jobs:
                     --request PUT \
                     --header "Accept:application/json" \
                     --header "Content-Type:application/json" \
-                    --data "{\"release_name\": \"my-rb\",
+                    --data "{\"release_name\": \"my-release-bundle-demo\",
                     \"release_version\":\"${{ env.RB_VERSION }}\",
                     \"target_environment\": \"DEV\"
                     }" \
