--- a/.github/workflows/build-publish-v2.yml
+++ b/.github/workflows/build-publish-v2.yml
@@ -18,7 +18,7 @@ jobs:
           JF_URL: https://${{ vars.JF_URL }}/
           DOCKER_CLI_EXPERIMENTAL: enabled
           NOW_URL: ${{ vars.NOW_URL }}
-          RB_VERSION: '2.0.1'
+          RB_VERSION: '1.0.1'
         steps:
             # Use the specific setup-cli branch
             - name: Setup JFrog CLI
@@ -172,6 +172,7 @@ jobs:
                     --header "Accept:application/json" \
                     --header "Content-Type:application/json" \
                     --data "{\"release_name\": \"my-rb\",
+                    \"project_key\":\"${{ env.JFROG_CLI_BUILD_PROJECT }}\",
                     \"release_version\":\"${{ env.RB_VERSION }}\",
                     \"target_environment\": \"DEV\"
                     }" \
