--- a/.github/workflows/build-publish-v2.yml
+++ b/.github/workflows/build-publish-v2.yml
@@ -16,6 +16,7 @@ jobs:
           DOCKER_REPO: 'carmit-prj-1-carmit-docker-local'
           IMAGE_NAME: 'my-very-cool-image:${{ github.run_number }}'
           JF_URL: https://${{ vars.JF_URL }}/
+          JF_PROJECT: carmit-prj-1
           DOCKER_CLI_EXPERIMENTAL: enabled
           NOW_URL: ${{ vars.NOW_URL }}
           RB_VERSION: '1.0.2'
@@ -26,7 +27,7 @@ jobs:
               id: setup-cli
               env:
                 JF_URL: https://${{ vars.JF_URL }}/
-                JF_PROJECT: carmit-prj-1
+                JF_PROJECT: ${{ env.JF_PROJECT }}
               with:
                   oidc-provider-name: evidence-demo
 
@@ -107,12 +108,12 @@ jobs:
                  echo "digest=$digest"
                  echo "docker_digest=$digest" | tr -d '"' >> $GITHUB_OUTPUT
 
-            #- name: Generate docker attestation
-            #  uses: actions/attest-build-provenance@v1
-            #  with:
-            #    subject-name: ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
-            #    subject-digest: ${{ steps.set_vars.outputs.docker_digest }}
-            #    push-to-registry: false
+            - name: Generate docker attestation
+              uses: actions/attest-build-provenance@v1
+              with:
+                subject-name: ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
+                subject-digest: ${{ steps.set_vars.outputs.docker_digest }}
+                push-to-registry: true
             
             #- name: docker scan
             # disabled because sca fails now on failed with error: Found invalid token
@@ -165,18 +166,18 @@ jobs:
                 jf release-bundle-create --signing-key test --spec build.json my-release-bundle-demo ${{ env.RB_VERSION }}
     
 
-            - name: request_promotion
-              run: |
-                  curl "${{ vars.NOW_URL }}/api/x_1560608_jfrog_1/release_promotion_request" \
-                    --request PUT \
-                    --header "Accept:application/json" \
-                    --header "Content-Type:application/json" \
-                    --data "{\"release_name\": \"my-release-bundle-demo\",
-                    \"project_key\":\"${{ env.JFROG_CLI_BUILD_PROJECT }}\",
-                    \"release_version\":\"${{ env.RB_VERSION }}\",
-                    \"target_environment\": \"DEV\"
-                    }" \
-                    --user 'admin':${{ secrets.SNOW_PASSWORD }}
+          #  - name: request_promotion
+          #    run: |
+          #        curl "${{ vars.NOW_URL }}/api/x_1560608_jfrog_1/release_promotion_request" \
+          #          --request PUT \
+          #          --header "Accept:application/json" \
+          #          --header "Content-Type:application/json" \
+          #          --data "{\"release_name\": \"my-release-bundle-demo\",
+          #          \"project_key\":\"${{ env.JFROG_CLI_BUILD_PROJECT }}\",
+          #          \"release_version\":\"${{ env.RB_VERSION }}\",
+          #          \"target_environment\": \"DEV\"
+          #          }" \
+          #          --user 'admin':${{ secrets.SNOW_PASSWORD }}
                     
 # removed \"project_key\":\"${{ env.JFROG_CLI_BUILD_PROJECT }}\",
                     
