--- a/.github/workflows/build-publish-v2.yml
+++ b/.github/workflows/build-publish-v2.yml
@@ -20,6 +20,9 @@ jobs:
           DOCKER_CLI_EXPERIMENTAL: enabled
           NOW_URL: ${{ vars.NOW_URL }}
           RB_VERSION: '1.0.4'
+        outputs:
+          image:  ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
+          digest: ${{ steps.set_vars.outputs.docker_digest }}
         steps:
             # Use the specific setup-cli branch
             - name: Setup JFrog CLI
@@ -205,3 +208,14 @@ jobs:
             #        echo "$IMPORTANT" >> $GITHUB_STEP_SUMMARY
             #        echo "$WARNING" >> $GITHUB_STEP_SUMMARY
             #        echo "$CAUTION" >> $GITHUB_STEP_SUMMARY
+    #SLSA Build Level 3 provenance
+    provenance:
+      needs: [build-publish-python]
+      uses: slsa-framework/slsa-github-generator/.github/workflows/generator_container_slsa3.yml@v2.0.0
+      with:
+          image:  ${{ needs.build-publish-python.outputs.image }}
+          digest: ${{ needs.build-publish-python.outputs.digest }}
+          private-repository: false          
+      #secrets:
+      #    registry-username: ${{ secrets.JF_ACCESS_USER }}
+      #    registry-password: ${{ secrets.JF_ACCESS_TOKEN }}
