--- a/.github/workflows/build-publish-v2.yml
+++ b/.github/workflows/build-publish-v2.yml
@@ -13,13 +13,13 @@ jobs:
     build-publish-python:
         runs-on: ubuntu-latest              
         env:
-          DOCKER_REPO: 'carmit-prj-1-carmit-docker-local'
+          DOCKER_REPO: 'test-docker-local'
           IMAGE_NAME: 'my-very-cool-image:${{ github.run_number }}'
           JF_URL: https://${{ vars.JF_URL }}/
-          JF_PROJECT: carmit-prj-1
+          JF_PROJECT: "default"
           DOCKER_CLI_EXPERIMENTAL: enabled
           NOW_URL: ${{ vars.NOW_URL }}
-          RB_VERSION: '1.0.6'
+          RB_VERSION: '1.0.7'
         outputs:
           image:  ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
           digest: ${{ steps.set_vars.outputs.docker_digest }}
@@ -30,7 +30,7 @@ jobs:
               id: setup-cli
               env:
                 JF_URL: https://${{ vars.JF_URL }}/
-                JF_PROJECT: ${{ env.JF_PROJECT }}
+                #JF_PROJECT: ${{ env.JF_PROJECT }}
               with:
                   oidc-provider-name: evidence-demo
 
