--- a/.github/workflows/build-test-l3-provenance.yml
+++ b/.github/workflows/build-test-l3-provenance.yml
@@ -117,6 +117,7 @@ jobs:
           registry-password: ${{ secrets.JF_ACCESS_TOKEN }}
 
     test_options:
+      needs: [build]
       runs-on: ubuntu-latest              
       env:
           DOCKER_REPO: 'test-docker-local'
@@ -132,6 +133,9 @@ jobs:
       steps:
       - name: print event payload
         id: event
-        run: |
+        run: |         
+          echo "Event Name: ${{ github.event_name }}"
+          echo "Repository: ${{ github.repository }}"
+          echo "Commit Message: ${{ github.event.head_commit.message }}"
+          echo "Pushed by: ${{ github.event.pusher.name }}"
           echo "Full Event Payload: ${{ toJson(github.event) }}"
-          
