--- a/.github/workflows/build-test-l3-provenance.yml
+++ b/.github/workflows/build-test-l3-provenance.yml
@@ -84,7 +84,7 @@ jobs:
               id: build
               with:
                 push: true
-                provenance: true
+                provenance: false
                 platforms: linux/amd64 #, linux/arm64
                 tags: ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
 
