--- a/.github/workflows/test_action.yml
+++ b/.github/workflows/test_action.yml
@@ -8,11 +8,15 @@ jobs:
     runs-on: ubuntu-latest
     name: A job to say hello
     steps:
+      - uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.MYPAT }}
       - name: Hello world action step
         id: hello
         uses: carmithersh/test_action@3df21c32bade19faf0f04741abe125e3e3b25ef7
         with:
           who-to-greet: 'Mona the Octocat'
+          token: ${{ secrets.MYPAT }}
       # Use the output from the `hello` step
       - name: Get the output time
         run: echo "The time was ${{ steps.hello.outputs.time }}"
