--- a/.github/workflows/test_action.yml
+++ b/.github/workflows/test_action.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     name: A job to say hello
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@main
         with:
           token: ${{ secrets.MYPAT }}
       - name: Hello world action step
