--- a/.github/workflows/test_action.yml
+++ b/.github/workflows/test_action.yml
@@ -2,15 +2,17 @@ name: test_action
 on: [push]
 permissions:
   actions: read # for detecting the Github Actions environment.
-  
+  contents: read
 jobs:
   hello_world_job:
     runs-on: ubuntu-latest
     name: A job to say hello
     steps:
-      - uses: actions/checkout@main
+      - uses: actions/checkout@V4
         with:
           token: ${{ secrets.MYPAT }}
+          repository: carmithersh/test_action
+          ref: main  
       - name: Hello world action step
         id: hello
         uses: carmithersh/test_action@3df21c32bade19faf0f04741abe125e3e3b25ef7
