--- a/.github/workflows/test_post_action.yml
+++ b/.github/workflows/test_post_action.yml
@@ -20,7 +20,7 @@ jobs:
         id: setup-cli
         uses: jfrog/setup-jfrog-cli@v4
         env:
-          JF_URL: https://${{ vars.ARTIFACTORY_URL }}
+          JF_URL: https://${{ vars.JF_URL }}
           JF_PROJECT: carmit-prj-1
         with:
          oidc-provider-name: jfrog-github-oidc
@@ -58,7 +58,7 @@ jobs:
       - name: Authenticate Docker
         uses: docker/login-action@v3
         with:
-          registry: ${{ vars.ARTIFACTORY_URL }}
+          registry: ${{ vars.JF_URL }}
           username: ${{ steps.setup-cli.outputs.oidc-user }} 
           password: ${{ steps.setup-cli.outputs.oidc-token }}
           
@@ -68,13 +68,13 @@ jobs:
         with:
           push: true
           platforms: linux/amd64, linux/arm64
-          tags: ${{ vars.ARTIFACTORY_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}          
+          tags: ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}          
       
       - name: Generate docker attestation
         id: attest
         uses: actions/attest-build-provenance@v1
         with:
-          subject-name: ${{ vars.ARTIFACTORY_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
+          subject-name: ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
           subject-digest: ${{ steps.build.outputs.digest }}
     
       # print and get attestation bundle location into env var (optional)
