--- a/.github/workflows/build-publish-v2.yml
+++ b/.github/workflows/build-publish-v2.yml
@@ -16,7 +16,7 @@ jobs:
           JF_PROJECT: ${{ vars.JF_PROJECT_KEY }}
           DOCKER_CLI_EXPERIMENTAL: enabled
           NOW_URL: ${{ vars.NOW_URL }}
-          RB_VERSION: '1.0.9'
+          RB_VERSION: '1.0.0'
         outputs:
           image:  ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
           digest: ${{ steps.set_vars.outputs.docker_digest }}
@@ -29,7 +29,7 @@ jobs:
                 JF_URL: https://${{ vars.JF_URL }}/
                 JF_PROJECT: ${{ env.JF_PROJECT }}
               with:
-                  oidc-provider-name: evidence-demo
+                  oidc-provider-name: github
 
             - name: Checkout the repository
               uses: actions/checkout@v4
@@ -38,7 +38,7 @@ jobs:
             - name: configure jfrog environment
               run: |
                 # Use a curated repository for python dependencies resolution
-                jf pip-config --repo-resolve=carmit-prj-1-carmit-python-remote 
+                jf pip-config --repo-resolve=${{ env.JF_PROJECT }}-carmit-python-remote 
 
             - name: configure environment
               run: |    
@@ -69,7 +69,7 @@ jobs:
                 
             - name: publish python package
               run: |
-                jf rt u dist/ carmit-prj-1-carmit-python/example-projects/
+                jf rt u dist/ ${{ env.JF_PROJECT }}-carmit-python/example-projects/
 
            # - name: check file system post binary attestation
            #   run: |   
